# goit-algo2-hw-05

./: .gitignore  README.md  pyproject.toml
src/: task_01.py  task_02.py
